delete: borrando de cache

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <div class="segunda">
 
   <div class="titulo">
-        <p><span>¡Estamos Creciendo!</span></p>
+        <p><span>¡Estamos creciendo!</span></p>
   </div>
 <div>
 
-    <p>Para nosotros es un vedadero gusto informarle a nuestros clientes que <span> Sistemas Amigables</span> se encuentra en un proceso de renovacion,esto siempre en pro de la mejora y el crecimiento.
+    <p>Para nosotros es un vedadero gusto informarle a nuestros clientes que <span> Sistemas Amigables</span> se encuentra en un proceso de renovación,esto siempre en pro de la mejora y el crecimiento.
     </p>
-    <p> Por este motivo les informamos que nuestros empresa dejara de llamarse <span>Sistemas Amigables de Costa rica A.S</span>  y pasara a nombrarse <span>Sistemas Amigables latinoamerica S.A</span>.Para ello estamos ivirtiendo en una renovacion de imagen corporativa y en la parte administrativa de la empresa.Todo esto con el fin de brindarles cada dia un mejor producto. </P>
+    <p> Por este motivo les informamos que nuestros empresa dejará de llamarse <span>Sistemas Amigables de Costa Rica S.A. </span>  y pasará a nombrarse <span>Sistemas Amigables Latinoamérica S.A</span>.Para ello estamos invirtiendo en una renovación de imagen corporativa y en la parte administrativa de la empresa.Todo esto con el fin de brindarles cada  día un mejor producto. </P>
 
 
     <p>¡Esperamos seguir creciendo juntos y brindarles un servicio de excelencia!</p>
